// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`success delete article 1`] = `
"<h4 class=\\"page-header\\"> Articles
  <!--0-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"articles-page\\">
    <!--0-->
    <!--0-->
    <div class=\\"container mg-b-30\\">
      <a data-test-toggle-create-form=\\"\\" class=\\"btn\\" href=\\"/articles/new\\"> Create new article </a>
    </div>
    <div class=\\"container\\">
      <div class=\\"article-list\\">
        <div class=\\"panel\\">
          <div class=\\"pagination\\">
            <div class=\\"page-buttons\\">
              <!--0-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--1-->
            </div>
            <!--0-->
            <table class=\\"list-table\\">
              <thead>
                <tr>
                  <th>ID</th>
                  <th>Title</th>
                  <th>Slug</th>
                  <th>Category</th>
                  <th>Published at</th>
                  <th></th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"text-center\\">10</td>
                  <td>Тест2</td>
                  <td>test2</td>
                  <td>Кухня</td>
                  <td>понедельник, 25 апреля 2022 г., 19:34:23</td>
                  <td class=\\"actions\\">
                    <a class=\\"btn\\" href=\\"/articles/10/edit\\" data-test-update-button=\\"10\\"> Edit </a>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"10\\"> Delete </button>
                  </td>
                </tr>
                <tr>
                  <td class=\\"text-center\\">2</td>
                  <td>Вторая</td>
                  <td>second</td>
                  <td>Быт</td>
                  <td>вторник, 22 марта 2022 г., 08:26:23</td>
                  <td class=\\"actions\\">
                    <a class=\\"btn\\" href=\\"/articles/2/edit\\" data-test-update-button=\\"2\\"> Edit </a>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"2\\"> Delete </button>
                  </td>
                </tr>
                <!--0-->
              </tbody>
            </table>
            <div class=\\"modal\\" data-test-modal=\\"\\"><span class=\\"close\\" title=\\"Close Modal\\" data-test-close-button=\\"\\">×</span>
              <!--0-->
              <div class=\\"modal-content\\">
                <div class=\\"container\\">
                  <h4>Delete article</h4>
                  <p class=\\"content\\">Are you sure you want to delete article \\"Тест2\\"?</p>
                  <div class=\\"footer\\">
                    <button data-test-ok-button=\\"\\" class=\\"btn-danger\\">Ok</button>
                    <button class=\\"btn-secondary\\" data-test-cancel-button=\\"\\">Cancel</button>
                  </div>
                </div>
              </div>
            </div>
            <!--0-->
            <!--1-->
            <!--0-->
            <!--0-->
            <!--1-->
            <div class=\\"page-buttons\\">
              <!--0-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--1-->
            </div>
            <!--2-->
          </div>
        </div>
      </div>
    </div>
  </div>
  <!--1-->
</div>
<!--0-->
<!--0-->
<!--0-->"
`;

exports[`success delete article 2`] = `
"<h4 class=\\"page-header\\"> Articles
  <!--0-->
</h4>
<div class=\\"page-body\\">
  <div class=\\"articles-page\\">
    <!--0-->
    <!--0-->
    <div class=\\"container mg-b-30\\">
      <a data-test-toggle-create-form=\\"\\" class=\\"btn\\" href=\\"/articles/new\\"> Create new article </a>
    </div>
    <div class=\\"container\\">
      <div class=\\"article-list\\">
        <div class=\\"panel\\">
          <div class=\\"pagination\\">
            <div class=\\"page-buttons\\">
              <!--0-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--1-->
            </div>
            <!--0-->
            <table class=\\"list-table\\">
              <thead>
                <tr>
                  <th>ID</th>
                  <th>Title</th>
                  <th>Slug</th>
                  <th>Category</th>
                  <th>Published at</th>
                  <th></th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td class=\\"text-center\\">2</td>
                  <td>Вторая</td>
                  <td>second</td>
                  <td>Быт</td>
                  <td>вторник, 22 марта 2022 г., 08:26:23</td>
                  <td class=\\"actions\\">
                    <a class=\\"btn\\" href=\\"/articles/2/edit\\" data-test-update-button=\\"2\\"> Edit </a>
                    <button class=\\"btn-danger\\" data-test-delete-button=\\"2\\"> Delete </button>
                  </td>
                </tr>
                <!--0-->
              </tbody>
            </table>
            <!--1-->
            <!--0-->
            <!--0-->
            <!--1-->
            <div class=\\"page-buttons\\">
              <!--0-->
              <button data-test-pagination-page=\\"1\\" disabled=\\"\\">1</button>
              <!--1-->
            </div>
            <!--2-->
          </div>
        </div>
      </div>
    </div>
  </div>
  <!--1-->
</div>
<!--0-->
<!--0-->
<!--0-->"
`;
